--- a/backend-domain-auth/Cargo.toml
+++ b/backend-domain-auth/Cargo.toml
@@ -12,6 +12,13 @@ path = "src/main.rs"
 actix-web = "4.5"
 dotenvy = "0.15"
 diesel = { version = "2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
-serde = { version = "1.0.197", features = ["derive"] }
-derive_more = "0.99.17"
+serde = { version = "1.0", features = ["derive"] }
+derive_more = "0.99"
 jsonwebtoken = { version = "9.3"}
+chrono = "0.4"
+uuid = {version = "1.8", features = [
+    "v4",
+    "fast-rng",
+    "macro-diagnostics",
+]}
+
