--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.11",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "pinia": "^2.1.7",
+    "quasar": "^2.15.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.6.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.28",
@@ -32,6 +35,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.0.3",
+    "sass": "^1.33.0",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
     "vue-tsc": "^2.0.6"
